added migrations and sharding
