# internal/models/models.go
@@ -1,1 +1,12 @@
 package models
+
+import "time"
+
+type User struct {
+	Id        int64
+	Name      string
+	Email     string
+	TigrId    string
+	Rating    int64
+	CreatedAt time.Time
+}
